Adds Carthage support for PINRemoteImage
Add a new project that builds a framework instead of static lib.
Setup Cartfile.
Fixes for TARGET_OS_IPHONE and FLAnimatedImageView compiling.

--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,6 @@ Example/PIRemoteImage.xcworkspace
 # http://guides.cocoapods.org/using/using-cocoapods.html#should-i-ignore-the-pods-directory-in-source-control
 #
 # Pods/
+
+# Ignore Carthage intermediate files
+Carthage/
