Fix umbrella framework header
Xcode wants PINRemote.h to be an umbrella framework header, meaning it imports everything in the framework, so I had to move some stuff out to PINRemoteImageMacros.h so as to fix circular dependencies when doing this.
This might also fix some possible macro bugs, i think it is possible that not every file was properly importing the macro definitions (eg for getting USE_FLANIMATED_IMAGE).

Also just remove the TARGET_OS_IPHONE check entirely, becuase this project does not compile for OSX at all and it will take significantly more rewrites than just swapping UIImage for NSImage.

--- a/PINRemoteImage/PINRemoteImage.xcodeproj/xcshareddata/xcschemes/PINRemoteImage.xcscheme
+++ b/PINRemoteImage/PINRemoteImage.xcodeproj/xcshareddata/xcschemes/PINRemoteImage.xcscheme
@@ -16,7 +16,7 @@
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "F1B918D01BCF239200710963"
                BuildableName = "PINRemoteImage.framework"
-               BlueprintName = "PINRemoteImage"
+               BlueprintName = "PINRemoteImage-iOS"
                ReferencedContainer = "container:PINRemoteImage.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
@@ -47,7 +47,7 @@
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "F1B918D01BCF239200710963"
             BuildableName = "PINRemoteImage.framework"
-            BlueprintName = "PINRemoteImage"
+            BlueprintName = "PINRemoteImage-iOS"
             ReferencedContainer = "container:PINRemoteImage.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
@@ -65,7 +65,7 @@
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "F1B918D01BCF239200710963"
             BuildableName = "PINRemoteImage.framework"
-            BlueprintName = "PINRemoteImage"
+            BlueprintName = "PINRemoteImage-iOS"
             ReferencedContainer = "container:PINRemoteImage.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
